--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Network Devices</string>
+    <string name="right_button">Shutdown</string>
+    <string name="left_button">Temp</string>
     <string name="clear_button">Clear</string>
-    <string name="func_button">ls</string>
 </resources>
